--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ h2{
     position: relative;
     display: inline-flex;
     justify-content: center;
-    background-color: var(--gray-color);
+    background-color: grey;
     overflow: hidden;
     margin: 20px 20px 20px 20px;
 }
